<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Create Profile</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="register">Register</string>
    <string name="previous">Previous</string>
    <string name="user_email">Email</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="user_name">Username</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="matches">Matches</string>
    <string name="settings">Settings</string>
    <string name="Welcome">Welcome!</string>
    <dimen name="twoHundredDp">200dp</dimen>
    <string name="enter_name">name</string>
    <string name="enter_age">age</string>
    <string name="bio">Bio</string>
    <string name="job">Job</string>
    <string name="submit">Submit!</string>
    <string name="my_name">Dylan</string>
    <string name="home">Home</string>
    <string name="like">Like</string>
    <string name="you_liked">You liked %1$s</string>
    <string name="network_provider_update">Network provider update</string>
    <string name="network_provider_started_running">Network provider started running</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_message">Your Locations Settings is set to \\\'Off\\\'. Please Enable Location to use this app</string>
    <string name="location_settings">Location Settings</string>
    <string name="cancel">Cancel</string>
    <string name="empty_string" />
    <string name="sample_database">sample-database</string>
    <string name="daily_reminder_time">Daily Reminder Time:</string>
    <string name="maximum_distance_for_matches_search">Maximum Distance for Matches Search:</string>
    <string name="seeking_male_female_nonbinary">Seeking (Male/Female/Nonbinary):</string>
    <string name="account_visibility_public_private">Account Visibility (public/private):</string>
    <string name="age_range_desired">Age Range Desired:</string>
    <string name="save_settings">Save Settings</string>
    <string name="settings_saved">Settings saved!</string>

    <string name="hello_first_fragment">Create Profile</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="profilePicture">profilePicture</string>
</resources>