<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout android:id="@+id/relativeLayout"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:background="@color/black">


        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:layout_marginTop="@dimen/twentyDp"
            android:padding="@dimen/tenDp"
            android:inputType="text"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:autofillHints="" />

        <EditText
            android:id="@+id/ageEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twentyDp"
            android:padding="@dimen/tenDp"
            android:hint="@string/enter_age"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="text"
            android:autofillHints=""/>

        <EditText
            android:id="@+id/jobEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twentyDp"
            android:padding="@dimen/tenDp"
            android:hint="@string/job"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/bioEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twentyDp"
            android:padding="@dimen/tenDp"
            android:hint="@string/bio"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="text"
            android:autofillHints="" />
        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="goToSecondActivity"
            android:layout_marginStart="@dimen/twentyDp"
            android:layout_marginTop="@dimen/twentyDp"
            android:layout_marginBottom="@dimen/twentyDp" />

    </LinearLayout>
</ScrollView>